updated navbar; added additional views

--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -4,10 +4,10 @@
             <a class="navbar-brand" href="/">
                 Charity Tracker
             </a>
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/donations/new">
                 | Add a Donation
             </a>
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/events/new">
                 | Add an Event
             </a>
         </div>
