can now see index, create donation, create event and both events and donations are populated into index fields

--- a/views/events-new.handlebars
+++ b/views/events-new.handlebars
@@ -15,7 +15,7 @@
         <!-- date -->
           <div>
             <label for="date">Event Date</label><br>
-            <input class="form-control" type="date" name="date"/>
+            <input class="form-control" id="event-date" type="date" name="date"/>
         </div>
         <!-- notes -->
           <div>
