--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,18 +6,17 @@
                 <h3>Events</h3>
             </tr>
             <tr>
-                <th scope="col">Event Title</th>
-                <th scope="col">Date</th>
-                <th scope="col">Charity</th>
+                <th class="col-sm-4" scope="col">Date</th>
+                <th class="col-sm-4" scope="col">Event Title</th>
+                <th class="col-sm-4" scope="col">Charity</th>
             </tr>
         </thead>
 
         <tbody>
             {{#each events}}
             <tr id="" data-event-id="">
-                <th scope="row"></th>
-                <td><a href="/events/{{this._id}}">{{this.title}}</a></td>
                 <td>{{this.date}}</td>
+                <th scope="row"><a href="/events/{{this._id}}">{{this.title}}</a></th>
                 <td>{{this.charity}}</td>
             </tr>
             {{/each}}
@@ -32,20 +31,17 @@
                 <h3>Donations</h3>
             </tr>
             <tr>
-                <th scope="col">Date</th>
-                <th scope="col">Charity</th>
-                <th scope="col">Event Title</th>
-                <th scope="col">Amount Donated</th>
+                <th class="col-sm-4" scope="col">Date</th>
+                <th class="col-sm-4" scope="col">Charity</th>
+                <th class="col-sm-4" scope="col">Amount Donated</th>
             </tr>
         </thead>
 
         <tbody>
             {{#each donations}}
             <tr id="" data-event-id="">
-                <th scope="row"></th>
-                <td>{{this.date}}</td>
-                <td>{{this.charity}}</td>
-                <td>{{this.eventId}}</td>
+                <th scope="row">{{this.date}}</th>
+                <td><a href="/donations/{{this._id}}">{{this.charity}}</a></td>
                 <td>{{this.amount}}</td>
             </tr>
             {{/each}}
