--- a/views/partials/donations-form.handlebars
+++ b/views/partials/donations-form.handlebars
@@ -7,7 +7,7 @@
               <label for="charity">Charity Name</label><br>
               <input id="donation-charity" class="form-control" type="text" name="charity" value="{{donation.charity}}"/>
           </div>
-          <!-- Event title -->
+          <!-- amount  -->
           <div>
             <label for="amount">Donation Amount</label><br>
             <input id="amount" class="form-control" type="number" name="amount" value="{{donation.amount}}"/>
@@ -18,13 +18,24 @@
             <label for="date">Donation Date</label><br>
             <input id="donation-date" class="form-control" type="date" name="date" value="{{donation.date}}"/>
         </div>
+        <!-- event -->
+        <label for="event">Event Title</label><br>
+
+        <select>
+          <option value="No Event">No Event</option>
+          <div id="event-select">
+              {{#each events}}
+                <option value="{{this.title}}">{{this.title}}</option>
+              {{/each}}
+          </div>
+        </select>
         <!-- notes -->
           <div>
             <label for="notes">Donation Notes</label><br>
             <textarea id="donation-notes" class="form-control" name="notes" rows="10" value="{{donation.notes}}"/></textarea>
         </div>
         <!-- BUTTONS -->
-        <button class="btn btn-primary" type="submit">Save Event</button>
+        <button class="btn btn-primary" type="submit">Save Donation</button>
         <button class="btn btn-danger" type="cancel">Cancel</button>
     </div>
 </fieldset>
