--- a/views/partials/donation.handlebars
+++ b/views/partials/donation.handlebars
@@ -5,6 +5,6 @@
         <p class="card-text">{{this.date}}</p>
         <p class="card-text">{{this.amount}}</p>
         <!-- Delete link -->
-        <p><button class="btn btn-link" id="deleteComment" data-comment-id="{{this._id}}">Delete</button></p>
+        <p><button class="btn btn-link" id="deleteDonation" data-donation-id="{{this._id}}">Delete</button></p>
     </div>
 </div>
