style edit on donation-show.handlebars

--- a/views/donations-new.handlebars
+++ b/views/donations-new.handlebars
@@ -1,6 +1,6 @@
 
 <!-- insert link to create donation associated with event -->
-<a href="/events">I'd like to add my donation under an event.</a>
+<a class ="text-center" href="/events" style="font-size:20px">I'd like my donation to be associated with an event I attended.</a>
 
 <fieldset>
     <form method="POST" action="/donations">
