--- a/views/donations-events-new.handlebars
+++ b/views/donations-events-new.handlebars
@@ -1,11 +1,12 @@
 
+<!-- Not currently used in app -->
 
-<fieldset>
+<!-- <fieldset>
     <form method="POST" action="/events/{{event._id}}">
         <legend>Donations</legend>
 
         <input type="hidden" class="form-control" value="{{event._id}}" name="eventId">
-        <!-- use donations form partial for DRY code -->
-        {{> donations-form}}
-    </form>
-</fieldset>
+        <! use donations form partial for DRY code -->
+        <!-- {{> donations-form}}
+    </form> -->
+<!-- </fieldset> -->
