--- a/views/donations-show.handlebars
+++ b/views/donations-show.handlebars
@@ -1,5 +1,7 @@
+<button type="submit" name="home-button">
+    <a href="/" style="font-size:30px">Home</a>
+</button>
 
-<a href="/">Back to Home</a>
 <div class="row">
     <div class="col-sm-6 col-sm-offset-4">
         <h1>Charity: {{donation.charity}}</h1>
