--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -42,7 +42,7 @@
             <tr id="" data-event-id="">
                 <th scope="row">{{this.date}}</th>
                 <td><a href="/donations/{{this._id}}">{{this.charity}}</a></td>
-                <td>{{this.amount}}</td>
+                <td>${{this.amount}}</td>
             </tr>
             {{/each}}
         </tbody>
