📃 working on adding pagination

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -22,6 +22,21 @@
             {{/each}}
         </tbody>
     </table>
+    <nav class="d-flex justify-content-center"aria-label="Page navigation">
+        <ul class="pagination">
+            <li class="page-item">
+                <a class="page-link" href=`?page=${currentPage - 1}`>Previous</a>
+            </li>
+            {{# times pagesCount}}
+                <li class="page-item">
+                    <a class="page-link" href="/?page={{this}}">{{this}}</a>
+                </li>
+            {{/times}}
+            <li class="page-item">
+                <a class="page-link" href=`?page=${parseInt(currentPage) + 1}`>Next</a>
+            </li>
+        </ul>
+    </nav>
 </div>
 
 <div class="col-sm-6">
