--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -38,7 +38,7 @@
                 </li>
             {{/times}}
 
-            {{#is currentPage numPages}}
+            {{#is currentPage pagesCount}}
                 <li class="page-item" style="display: none;"></li>
             {{else}}
                 <li class="page-item">
